[SIM] Renamed SeWelaSim environment

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 *.pyc
 
 /010_Construction/MainApplication/build/
+
+/020_Test/BuildTools
+/020_Test/SeWelaSim/build
+/020_Test/SeWelaSim/generated_src
