--- a/010_Construction/.project
+++ b/010_Construction/.project
@@ -26,9 +26,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>WeGetASim</name>
+			<name>SeWelaSim</name>
 			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/020_Test/WeGetASim</locationURI>
+			<locationURI>PARENT-1-PROJECT_LOC/020_Test/SeWelaSim</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
