--- a/010_Construction/MainApplication/UTIL/CMakeLists.txt
+++ b/010_Construction/MainApplication/UTIL/CMakeLists.txt
@@ -12,7 +12,15 @@
 #
 # *********************************************************************/
 
-idf_component_register(SRCS "util_conf.cpp"
-							"util_gen.cpp"
-                       INCLUDE_DIRS ".")
+#idf_component_register(SRCS "util_conf.cpp"
+#                             "util_gen.cpp"
+#                       INCLUDE_DIRS ".")
+                       
+                       
+SET(UTIL_SRCS_VLE ${CMAKE_CURRENT_SOURCE_DIR}/util_conf.cpp
+                  ${CMAKE_CURRENT_SOURCE_DIR}/util_gen.cpp )
+                   
+SET(VLE_SRCS       ${VLE_SRCS}
+                   ${UTIL_SRCS_VLE}
+                   PARENT_SCOPE )
 
