--- a/020_Test/SeWelaSim/CMakeLists.txt
+++ b/020_Test/SeWelaSim/CMakeLists.txt
@@ -27,6 +27,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Dsimulator")
 
 include(CMake_MainApplication.txt build/MainApplication)
 
+SET (SUBMODULES
+	Helpers
+)
+
 SET (LOCAL_SIM_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/sewela_sim.cpp)
 
 include_directories(.)
